@@ -1,16 +1,0 @@
-#!perl
-{
-  apps => [],
-  plugins => [
-    Reload => {
-      path => '/bad-path',
-      repositories => {
-        toadfarm => {
-          branch => 'master',
-          path => $ENV{PWD},
-          remote => 'origin',
-        },
-      },
-    },
-  ],
-}
